src/tests/fixtures/field_definitions/FieldAsStaticClassMethodInNestedScope.invalid.ts.expected
-----------------
INPUT
----------------- 
function main() {
  /** @gqlType */
  class User {
    /** @gqlField */
    name: string;

    /** @gqlField */
    static getUser(_: Query): User {
      return new User();
    }
  }
}

/** @gqlType */
type Query = unknown;

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/FieldAsStaticClassMethodInNestedScope.invalid.ts:3:3 - error: Expected class with a static `@gqlField` method to be a top-level declaration. Grats needs to import resolver methods into its generated schema module, so the resolver's class must be an exported.

  3   class User {
      ~~~~~~~~~~~~
  4     /** @gqlField */
    ~~~~~~~~~~~~~~~~~~~~
... 
 10     }
    ~~~~~
 11   }
    ~~~
